fixed align container in content module selection modal, click on container to select content module

--- a/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Category.less
+++ b/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Category.less
@@ -1295,13 +1295,28 @@ p:empty {
             text-align: center;
             padding: 10px;
             cursor: pointer;
-            font-size:16px;
+            font-size: 16px;
 
             &.active {
                 border-radius: 3px;
                 border: solid transparent 1px;
                 transition: 0.2s;
                 border-color: #45aece;
+            }
+
+            img.show-tooltip {
+                max-width: 120px;
+                max-height: 80px;
+                margin: 0 auto
+            }
+
+            .sampleContainerText {
+                text-align: center;
+                width: 100%;
+                line-height: 1.3;
+                margin-top: 5px;
+                height: 100%;
+                max-height: 40px;
             }
         }
     }
